samples/_failures_safe/1761555483_c3876c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13b9b433.c: In function ‘next_token’:
./samples/SAFE/__tmp_13b9b433.c:152:61: error: expected ‘]’ at end of input
  152 |                is_operator_char(lexer->input[lexer->position
      |                                                             ^
      |                                                             ]
./samples/SAFE/__tmp_13b9b433.c:152:16: error: expected declaration or statement at end of input
  152 |                is_operator_char(lexer->input[lexer->position
      |                ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_13b9b433.c:152:16: error: expected declaration or statement at end of input
